--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -2,26 +2,35 @@
 
 {% block body %}
 
-  <h1 xmlns="http://www.w3.org/1999/html">Lottery app</h1>
-  <hr>
-
   <div class="container">
 
-  <form action="{{ url_for('users.create_user') }}">
-    <input type="submit" value="Add" class="btn btn-success"/>
-  </form>
+   <h1 style="text-align: center">Lottery app</h1>
+   <hr>
+      <h3>Add new participant</h3>
+    <div id="error" style="color: #9C1A1C ">
+    </div>
+      <label for="username">User name:</label>
+      <input class="form-control" id="username" name="username" type="text" value="">
+      <br>
+      <input id="add_user" type="submit" value="Add" class="btn btn-success"/>
 
-    <button id="choose_winners" type="button" class="btn btn-success">Choose random winners</button>
 
-  <h3>Today our winners are:</h3>
-  <br>
-  <ul class="list-group">
-    <li id="list1" class="list-group-item"></li>
-    <li id="list2" class="list-group-item"></li>
-    <li id="list3" class="list-group-item"></li>
-  </ul>
+  <div>
+    <br>
+      <button id="choose_winners" type="button" class="btn btn-success">Choose random winners</button>
+  </div>
 
-  <h3>Currently registered users</h3>
+  <div id="winners_div" style="display:none;">
+    <h3>Today our winners are:</h3>
+    <br>
+    <ul class="list-group">
+      <li id="list1" class="list-group-item"></li>
+      <li id="list2" class="list-group-item"></li>
+      <li id="list3" class="list-group-item"></li>
+    </ul>
+  </div>
+
+  <h3>Currently registered participants</h3>
     <table class="table table-striped">
       <thead>
         <tr>
@@ -29,17 +38,17 @@
           <th>Remove</th>
         </tr>
       </thead>
-      <tbody>
-          {% for user in context %}
-        <tr>
-          <td>{{ user.username }}</td>
-          <td>
-              <a href="{{ url_for('users.delete_user', id=user.id ) }}">
-            <span class="glyphicon glyphicon-remove"></span>
-              </a>
-          </td>
-        </tr>
-          {% endfor %}
+      <tbody id="users">
+{#          {% for user in context %}#}
+{#        <tr>#}
+{#          <td id="usernaeme_list">{{ user.username }}</td>#}
+{#          <td>#}
+{#            <button class="btn btn-danger btn-xs delete_button" data-user-id="{{ user.id }}">#}
+{#              <span class="glyphicon glyphicon-trash"></span>#}
+{#            </button>#}
+{#          </td>#}
+{#        </tr>#}
+{#          {% endfor %}#}
       </tbody>
     </table>
    </div>
