--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>{{ title }} | User app</title>
+    <title> Lottery </title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script type=text/javascript src="{{url_for('static', filename='js/jquery.min.js') }}"></script>
     <script type=text/javascript src="{{url_for('static', filename='js/script.js') }}"></script>
